# ComfyUI-SaveAVIF

./: SaveAvif.py  __init__.py  pyproject.toml  requirements.txt
web/: avifInfo.js  saveAvifExtraOutput.js
